<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrator.materiatest.EditActivity"
    tools:showIn="@layout/activity_edit"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_xiangqing"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_below="@+id/edit_ISBN"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"/>

    <View
        android:id="@+id/hengxian"
        android:layout_width="360dp"
        android:layout_height="2dp"
        android:layout_below="@+id/edit_ISBN"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/gray"/>


    <ImageView
        android:id="@+id/edit_imageView"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:adjustViewBounds="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_biaoti"
        android:textSize="18dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="16dp"
        />

    <EditText
        android:id="@+id/edit_biaoti"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="18dp"
        android:hint="标题"
        android:textSize="18dp"
        android:maxLines="1"
      />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="52dp"
        android:text="@string/edit_zuoze"
        android:textSize="18dp"
        android:id="@+id/textView9"
        />

    <EditText
        android:id="@+id/edit_zuozhe"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:hint="多个请用逗号隔开"
        android:textSize="18dp"
        android:maxLines="1"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="88dp"
        android:text="@string/edit_yizhe"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/edit_yizhe"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="76dp"
        android:hint="多个请用逗号隔开"
        android:textSize="18dp"
        android:maxLines="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="124dp"
        android:text="@string/edit_chuabnshe"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/edit_chubanshe"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="112dp"
        android:hint="出版社"
        android:textSize="18dp"
        android:maxLines="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="160dp"
        android:text="@string/edit_chubanshijian"
        android:textSize="18dp"
        android:id="@+id/textView10"/>

    <EditText
        android:id="@+id/edit_year"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="148dp"
        android:hint="年"
        android:textSize="18dp"
        android:maxLines="1"
        android:gravity="center"/>

    <TextView
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="20dp"
        android:layout_marginLeft="280dp"
        android:layout_marginTop="160dp"/>

    <EditText
        android:id="@+id/edit_month"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:hint="月"
        android:layout_marginLeft="290dp"
        android:layout_marginTop="148dp"
        android:gravity="center"
        android:maxLines="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="196dp"
        android:text="@string/edit_ISBN"
        android:textSize="18dp"
        />

    <EditText
        android:id="@+id/edit_ISBN"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text=""
        android:layout_marginLeft="180dp"
        android:layout_marginTop="185dp"
        android:gravity="center"
        android:maxLines="1"/>

    <Spinner
        android:id="@+id/edit_spinner_state"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginLeft="80dp"
        android:layout_below="@+id/hengxian"
        android:layout_marginTop="20dp"
        android:spinnerMode="dropdown"
        />

    <View
        android:layout_width="180dp"
        android:layout_height="1px"
        android:background="@color/black"
        android:layout_below="@id/edit_spinner_state"
        android:layout_marginLeft="80dp"/>

    <Spinner
        android:id="@+id/edit_spinner_shelf"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/hengxian"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="80dp"
        android:spinnerMode="dropdown"
        />
    <View
        android:layout_width="180dp"
        android:layout_height="1px"
        android:background="@color/black"
        android:layout_below="@id/edit_spinner_shelf"
        android:layout_marginLeft="80dp"/>

    <EditText
        android:id="@+id/edit_biji"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text=""
        android:layout_marginLeft="80dp"
        android:layout_below="@+id/hengxian"
        android:layout_marginTop="110dp"
        android:hint="@string/edit_biji"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/edit_biaoqian"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_below="@+id/hengxian"
        android:layout_marginTop="160dp"
        android:hint="@string/dialog_addTag"
        android:textSize="20dp"
        android:focusable="false"
        android:textColor="@color/gray"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/edit_wangzhi"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_below="@id/hengxian"
        android:layout_marginTop="210dp"
        android:hint="网站"
        android:textSize="20dp"
        android:maxLines="1"
  />

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/imag_read_state"
        android:layout_below="@+id/hengxian"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        />
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/imag_shelf"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/hengxian"
        android:layout_marginTop="70dp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/imag_biji"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/hengxian"
        android:layout_marginTop="120dp"/>
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/imag_biaoqian"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/hengxian"
        android:layout_marginTop="170dp"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/hengxian"
        android:layout_marginTop="220dp"
        android:src="@drawable/imag_web"
        />

</RelativeLayout>
